<resources>
    <string name="app_id" translatable="false">ca-app-pub-5562164708259682~4422129380</string>
    <string name="banner_ads_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ads_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="app_open_ads_id" translatable="false">ca-app-pub-3940256099942544/9257395921</string>
    <string name="native_ads_fonts_id" translatable="false">"ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_ads_themes_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_ads_exit_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="rewarded_ads_id" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="giphy_api_key" translatable="false">luC3mKUg3TJ2afTjJVt3M7x46H38l14i</string>
    <string name="app_db_name" translatable="false">bulgarian_db.sqlite</string>
    <string name="app_freq_column" translatable="false">soft_freq</string>
    <string name="app_word_column" translatable="false">soft_word</string>
    <string name="eng_table_name" translatable="false">en_US</string>
    <string name="second_lang_table_name" translatable="false">bg</string>
    <string name="app_name" translatable="false">Bulgarian Keyboard 🇧🇬</string>
    <string name="app_name_heart" translatable="false">Bulgarian Keyboard 🇧🇬</string>
    <string name="img_des" translatable="false">Default Image</string>
    <string name="pub_from" translatable="false">From</string>
    <string name="pub_name" translatable="false">"Multilingual Keyboard Apps"</string>
    <string name="rate_app_link" translatable="false">https://rb.gy/3qv8o8</string>
    <string name="share_app_link" translatable="false">https://rb.gy/3qv8o8</string>
    <string name="more_apps_link" translatable="false">http://tinyurl.com/9tmdwhyx</string>
    <string name="feedback_email" translatable="false">fastkeyboard.translator@gmail.com</string>
    <string name="app_privacy_policy" translatable="false">https://fastkeyboardvoicetranslator.blogspot.com/p/privacy-policy.html</string>
    <string name="subscription_privacy_policy" translatable="false">https://fastkeyboardvoicetranslator.blogspot.com/p/subscription-policy.html</string>
    <string name="splash_loading_ad_txt" translatable="false">Loading advertisement Please wait ...</string>
    <string name="all_language_keyboard_app_link" translatable="false">https://tinyurl.com/37wemrkm</string>
    <string name="all_language_translator_app_link" translatable="false">https://tinyurl.com/4ftkfp63</string>
    <string name="qrcode_app_link" translatable="false">https://tinyurl.com/2s4h85n3</string>
    <string name="arabic_keyboard_app_link" translatable="false">https://tinyurl.com/yhc7zfd3</string>
    <string name="afghan_keyboard_app_link" translatable="false">https://tinyurl.com/2ckcdnrz</string>
    <string name="assamese_keyboard_app_link" translatable="false">https://tinyurl.com/yc3yzsrc</string>
    <string name="bangla_keyboard_app_link" translatable="false">https://tinyurl.com/4uxxpv7j</string>
    <string name="bulgarian_keyboard_app_link" translatable="false">https://tinyurl.com/ym3yyvbh</string>
    <string name="french_keyboard_app_link" translatable="false">https://tinyurl.com/mwjtw4p7</string>
    <string name="german_keyboard_app_link" translatable="false">https://tinyurl.com/5ytmypfm</string>
    <string name="georgian_keyboard_app_link" translatable="false">https://tinyurl.com/2mcdb64k</string>
    <string name="greek_keyboard_app_link" translatable="false">https://tinyurl.com/54bxph55</string>
    <string name="hebrew_keyboard_app_link" translatable="false">https://tinyurl.com/mryax348</string>
    <string name="hungarian_keyboard_app_link" translatable="false">https://tinyurl.com/yr45z5tp</string>
    <string name="kazakh_keyboard_app_link" translatable="false">https://tinyurl.com/42svfmyb</string>
    <string name="korean_keyboard_app_link" translatable="false">https://tinyurl.com/2k7jtwat</string>
    <string name="lao_keyboard_app_link" translatable="false">https://tinyurl.com/2jvvymwp</string>
    <string name="mongolian_keyboard_app_link" translatable="false">https://tinyurl.com/4dh5yrd6</string>
    <string name="myanmar_keyboard_app_link" translatable="false">https://tinyurl.com/2abf6jm7</string>
    <string name="norwegian_keyboard_app_link" translatable="false">https://tinyurl.com/3uh6vy7e</string>
    <string name="persian_keyboard_app_link" translatable="false">https://tinyurl.com/bdct96vn</string>
    <string name="russian_keyboard_app_link" translatable="false">https://tinyurl.com/5erxepn5</string>
    <string name="serbian_keyboard_app_link" translatable="false">https://tinyurl.com/z7n2fhbr</string>
    <string name="spanish_keyboard_app_link" translatable="false">https://tinyurl.com/mzjvv23p</string>
    <string name="swedish_keyboard_app_link" translatable="false">https://tinyurl.com/5bh87c5t</string>
    <string name="thai_keyboard_app_link" translatable="false">https://tinyurl.com/2p8vm3xs</string>
    <string name="uzbek_keyboard_app_link" translatable="false">https://tinyurl.com/29nsru7n</string>
    <string name="vietnamese_keyboard_app_link" translatable="false">https://tinyurl.com/3ny23zay</string>
    <string name="txt_family_apps" translatable="false">Family Apps</string>
    <string name="all_language_keyboard" translatable="false">All Language Keyboard (Ad)</string>
    <string name="all_language_translator" translatable="false">All Language Translator (Ad)</string>
    <string name="qr_code_scanner_barcode_scanner" translatable="false">QR Code &amp; Barcode Scanner (Ad)</string>
    <string name="arabic_keyboard" translatable="false">Arabic Keyboard (Ad)</string>
    <string name="afghan_keyboard" translatable="false">Pashto Keyboard (Ad)</string>
    <string name="assamese_keyboard" translatable="false">Assamese Keyboard (Ad)</string>
    <string name="bangla_keyboard" translatable="false">Bengali Keyboard (Ad)</string>
    <string name="bulgarian_keyboard" translatable="false">Bulgarian Keyboard (Ad)</string>
    <string name="french_keyboard" translatable="false">French Keyboard (Ad)</string>
    <string name="german_keyboard" translatable="false">German Keyboard (Ad)</string>
    <string name="georgian_keyboard" translatable="false">Georgian Keyboard (Ad)</string>
    <string name="greek_keyboard" translatable="false">Greek Keyboard (Ad)</string>
    <string name="hebrew_keyboard" translatable="false">Hebrew Keyboard (Ad)</string>
    <string name="hungarian_keyboard" translatable="false">Hungarian Keyboard (Ad)</string>
    <string name="kazakh_keyboard" translatable="false">Kazakh Keyboard (Ad)</string>
    <string name="korean_keyboard" translatable="false">Korean Keyboard (Ad)</string>
    <string name="lao_keyboard" translatable="false">Lao Keyboard (Ad)</string>
    <string name="mongolian_keyboard" translatable="false">Mongolian Keyboard (Ad)</string>
    <string name="myanmar_keyboard" translatable="false">Myanmar Keyboard (Ad)</string>
    <string name="system_default">System default</string>
    <string name="settings_theme_foreground">Foreground color</string>
    <string name="settings_theme_foreground_alt">Foreground color (alternative)</string>
    <string name="settings_theme_background">Background color</string>
    <string name="saving_one_handed_mode_label">One-handed mode</string>
    <string name="saving_height_factor_custom_label">Custom keyboard height value</string>
    <string name="saving_smartbar_enabled_label">Enable Suggestion Bar</string>
    <string name="saving_correction_double_space_period_label">Double-space period</string>
    <string name="saving_correction_double_space_period_summary">By clicking two times on Space bar a period will be inserted with space</string>
    <string name="saving_glide_title">Glide typing</string>
    <string name="saving_glide_enabled_label">Enable glide typing</string>
    <string name="saving_glide_enabled_summary">Type in a word by sliding your finger through its letters</string>
    <string name="saving_gestures_swipe_up_label">Gesture up</string>
    <string name="saving_gestures_swipe_down_label">Gesture down</string>
    <string name="saving_gestures_swipe_left_label">Gesture left</string>
    <string name="saving_gestures_swipe_right_label">Gesture right</string>
    <string name="saving_gestures_space_bar_swipe_left_label">Space Bar Gesture Left</string>
    <string name="saving_gestures_space_bar_swipe_right_label">Space Bar Gesture Right</string>
    <string name="saving_gestures_delete_key_swipe_left_label">Delete Button Gesture Left</string>
    <string name="app_version" translatable="false">v 1.0.1</string>
    <string name="mobile_consent_form">GDPR Consent Form</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="txt_nav_home">Home</string>
    <string name="txt_nav_rate_app">Rate &amp; Review (Ad)</string>
    <string name="txt_nav_share_app">Share App (Ad)</string>
    <string name="txt_nav_more_apps">Our Apps (Ad)</string>
    <string name="txt_nav_family_apps">Our Family Apps (Ad)</string>
    <string name="txt_nav_feedback">Feedback</string>
    <string name="txt_nav_update">Update App</string>
    <string name="txt_nav_ads_remove">Remove Ads</string>
    <string name="other">Other</string>
    <string name="enable_disable_number_row">Enable/Disable Number Row</string>
    <string name="visible_number_row">Visible Number Row on the Top of Keyboard</string>
    <string name="show_numeric_hints">Show Numeric Hints</string>
    <string name="show_numeric_hint_on_first_row">Show numbers hint on the first row of characters</string>
    <string name="show_symbol_hints">Show Symbol Hints</string>
    <string name="show_symbol_hints_on_rows">Show Symbols hint on the second and third row of characters</string>
    <string name="adjust_keyboard_font_size_portrait">Adjust Keyboard Font Size for Portrait view</string>
    <string name="adjust_keyboard_font_size_landscape">Adjust Keyboard Font Size for Landscape view</string>
    <string name="keyboard_layout_settings">Keyboard Layout Settings</string>
    <string name="keyboard_height">Keyboard Height</string>
    <string name="keyboard_key_click_settings">Keyboard Key Click Settings</string>
    <string name="play_sound_on_key_click">Play Sound on Key Click</string>
    <string name="key_click_sound_volume">Adjust Key click sound volume</string>
    <string name="vibrate_on_key_click">Vibrate on Key Click</string>
    <string name="key_vibration_strength">Adjust Key Vibration Strength</string>
    <string name="enable_popup_alphabets">Show Pop-Up alphabets when user clicks a key</string>
    <string name="popup_feature">Pop-Up Feature</string>
    <string name="correction_settings">Correction Settings</string>
    <string name="auto_capitalize">Auto Capitalize</string>
    <string name="save_caps_lock_state">Save Caps Lock state</string>
    <string name="available_gestures">Available Gestures</string>
    <string name="enable_disable_keyboard_one_handed_mode">Enable/Disable One Handed Mode</string>
    <string name="keyboard_keys_settings">Keyboard Keys Settings</string>
    <string name="enable_disable_suggestions_bar">This will be visible on the top of Keyboard View</string>
    <string name="suggestions_will_shown_on_suggestion_bar">All suggestions will be shown on Suggestion Bar</string>
    <string name="show_suggestions">Show suggestions when user type</string>
    <string name="customize_suggestion_bar">Customize Suggestion Bar</string>
    <string name="customize_suggestion_button">Customize Suggestion Button</string>
    <string name="app_languages">Choose App Language</string>
    <string name="change_app_theme">Choose App Theme</string>
</resources>