<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_120sdp">


    <View
        android:id="@+id/viewTop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivAppIcon"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:contentDescription="@string/img_des"
        android:src="@drawable/icon_splash"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/app_name_heart"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivAppIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivAppIcon"
        app:layout_constraintTop_toTopOf="@id/ivAppIcon" />

    <TextView
        android:id="@+id/tvAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/app_version"
        android:visibility="gone"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/viewBottom"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/viewBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>